[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taming-transformers"
version = "0.0.1"
description = "README.md"
license = {file="License.txt"}
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["taming*"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
"Homepage" = "https://github.com/CompVis/taming-transformers"
